syntax = "proto3";

option csharp_namespace = "Elsa.Runtime.Protos";

import "google/protobuf/empty.proto";
import "Messages.proto";

service WorkflowGrain {
  rpc Start (StartWorkflowRequest) returns (StartWorkflowResponse);
  rpc Resume (ResumeWorkflowRequest) returns (ResumeWorkflowResponse);
}

service BookmarkGrain {
  rpc Store(StoreBookmarkRequest) returns (Unit);
  rpc Remove(RemoveBookmarkRequest) returns (Unit);
  rpc Resolve (ResolveBookmarkRequest) returns (ResolveBookmarkResponse);
}